[tool.poetry]
name = "pytorch-learning"
version = "0.0.1"
description = ""
authors = ["yanyongyu <yanyongyu_1@126.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.1"
ipykernel = "^6.4.1"
torchaudio = "^0.9.1"
torchvision = "^0.10.1"
notebook = { version = "^6.4.4", optional = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
jupyter = ["notebook"]
all = ["notebook"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
